# convai-narrative-memory-poc

./: ANCHOR_FLUX_MODEL.md  ARCHITECTURE.md  ENV_CONFIG.md  EXPERIMENTAL_METHODOLOGY.md  FEASIBILITY_ANALYSIS.md  FORGETTING_CURVE.md  README.md  RESEARCH_PROPOSAL.md  memory_in_action.md  poc.py  pyproject.toml  simulation_results.md  simulation_run.md
.github/workflows/: docker-image.yml
convai_narrative_memory_poc/: docker-compose.yml  requirements.txt
convai_narrative_memory_poc/scripts/: demo_simulation.py
convai_narrative_memory_poc/tools/: CHATBOT_DEMO.md  CHATBOT_README.md  Dockerfile  QUICKSTART.md  chatbot.py  check_stack.sh  create_topics.sh  demo_three_retells.py  inspect_qdrant.py  memory_service.py  seed_and_query.py  validation_experiments.py
convai_narrative_memory_poc/ui/: streamlit_app.py
convai_narrative_memory_poc/workers/common/: utils.py
convai_narrative_memory_poc/workers/indexer/: Dockerfile  main.py
convai_narrative_memory_poc/workers/resonance/: Dockerfile  main.py
convai_narrative_memory_poc/workers/reteller/: Dockerfile  main.py
docs/: index.html  project-driven-creation-PMC.md
docs/onboarding/: 01_Project_Overview.md  02_Architecture_And_Data_Flow.md  03_Service_Deep_Dive.md  04_Infrastructure.md  05_Configuration.md  06_Development_Deployment.md  07_Tooling_And_Scripts.md
research/: anchor_flux_model.md  architecture.md  concept_dictionary.md  env_config.md  forgetting_curve.md  indexer_enhancement_plan.md  indexer_testability_analysis.md  research_validation.md  resonance_enhancement_plan.md  reteller_enhancement_plan.md  session_summary_2025-11-21.md  threats_to_validity.md  workers_comparison.md
results/: demo-three-retells-20251003T053153Z.json  demo-three-retells-20251004T104758Z.json  demo-three-retells-20251010T090200Z.json  demo-three-retells-20251010T091544Z.json  validation_results.json
tests/: conftest.py
tests/fixtures/: indexer_anchors.json
tests/workers/: __init__.py
tests/workers/indexer/: __init__.py  test_indexer_integration.py  test_indexer_units.py
