[project]
name = "convai-narrative-memory-poc"
version = "0.1.0"
description = "A proof-of-concept for narrative memory in conversational AI."
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "litellm",
    "qdrant-client==1.9.2",
    "pydantic==2.6.1",
    "python-dateutil==2.9.0.post0",
    "uvicorn==0.30.1",
    "fastapi==0.111.0",
    "tqdm==4.66.4",
    "orjson==3.10.7",
    "numpy==1.26.4",
    "confluent-kafka==2.4.0",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
