[project]
name = "convai-narrative-memory-poc"
version = "0.1.0"
description = "A proof-of-concept for narrative memory in conversational AI."
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "litellm",
    "portkey-ai",
    "qdrant-client>=1.9.2",
    "pydantic>=2.6.1",
    "python-dateutil==2.9.0.post0",
    "uvicorn==0.30.1",
    "fastapi==0.111.0",
    "tqdm==4.66.4",
    "orjson==3.10.7",
    "numpy==1.26.4",
    "confluent-kafka==2.4.0",
    "requests>=2.32.5",
    "urllib3>=2.0.0",
    "certifi",
    "charset-normalizer",
    "idna",
    "protobuf>=6.32.1",
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "typing-extensions>=4.15.0",
    "pydantic-core>=2.16.2",
    "annotated-types>=0.7.0",
    "typing-inspection>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
